--- a/src/main/resources/templates/semiMember/pagingList.html
+++ b/src/main/resources/templates/semiMember/pagingList.html
@@ -7,9 +7,19 @@
   <link rel="stylesheet" th:href="@{/css/member/pagingList.css}">
 </head>
 <body>
-<!--<div th:replace="~{fragments/common/header :: headerFragment}"></div>-->
 <div class="pagingList">
   <div class="pagingList-con">
+    <div class="boardList-table">
+      <h1>간편회원 목록</h1>
+      <div class="search">
+        <form th:action="@{/semiMember/pagingList}" method="get">
+          <select name="subject" id="subject">
+            <option value="semiMemberEmail">이메일</option>
+          </select>
+          <input type="text" name="search" id="search" th:value="${param.search}" placeholder="검색어를 입력하세요"> <!-- th:value="${param.search}" : 검색어 입력후 실행하고 입력한 검색어 그대로 유지 -->
+          <input type="submit" value="검색">
+        </form>
+      </div>
     <table style="width:1700px;" align="center" border="1";>
       <thead>
       <tr>
@@ -45,7 +55,7 @@
           <span th:if="${1==semiMemberList.pageable.pageNumber+1}" class="span0">처음</span>
           <!-- 처음 페이지가 아니면  a -->
           <span th:unless="${1==semiMemberList.pageable.pageNumber+1}">
-            <a th:href="@{/semiMember/pagingList(page=0)}" class="span1">처음</a>
+            <a th:href="@{/semiMember/pagingList(page=0, search=${param.search}, subject=${param.subject})}" class="span1">처음</a>
           </span>
         </li>
         <li>
@@ -53,21 +63,21 @@
           <span th:if="${1==semiMemberList.pageable.pageNumber+1}"  class="span0">이전</span>
           <span th:unless="${1==semiMemberList.pageable.pageNumber+1}">
             <!--boardList.pageable.pageNumber 현재페이지 -1 -->
-            <a th:href="@{/semiMember/pagingList(page=${semiMemberList.pageable.pageNumber-1})}" class="span1">이전</a>
+            <a th:href="@{/semiMember/pagingList(page=${semiMemberList.pageable.pageNumber-1}, search=${param.search}, subject=${param.subject})}" class="span1">이전</a>
           </span>
         </li>
         <!--페이지 번호-->
         <li th:each="i: ${#numbers.sequence(startPage, endPage)}" class="block">
           <span th:if="${i==semiMemberList.pageable.pageNumber+1}" th:text="${i}" class="now"></span>
           <a th:unless="${i==semiMemberList.pageable.pageNumber+1}"
-             th:href="@{/semiMember/pagingList(page=${i-1})}" th:text="${i}"></a>
+             th:href="@{/semiMember/pagingList(page=${i-1}, search=${param.search}, subject=${param.subject})}" th:text="${i}"></a>
         </li>
         <li>
           <!-- 현재페이지가 마지막 페이지이면   span표시 -->
           <span th:if="${semiMemberList.totalPages ==semiMemberList.pageable.pageNumber+1}"  class="span0">다음</span>
           <!-- 현재페이지가 마지막 페이지아니면    a 표시 현재페이지 +1 -->
           <span th:unless="${semiMemberList.totalPages ==semiMemberList.pageable.pageNumber+1}">
-             <a th:href="@{/semiMember/pagingList(page=${semiMemberList.pageable.pageNumber+1})}"   class="span1">다음</a>
+             <a th:href="@{/semiMember/pagingList(page=${semiMemberList.pageable.pageNumber+1}, search=${param.search}, subject=${param.subject})}"   class="span1">다음</a>
           </span>
         </li>
         <li>
@@ -75,7 +85,7 @@
           <span th:if="${semiMemberList.totalPages ==semiMemberList.pageable.pageNumber+1}"  class="span0">마지막</span>
           <!-- 현재페이지가 마지막 페이지가 아니면 마지막 페이지로 이동 해라  a -->
           <span th:unless="${semiMemberList.totalPages ==semiMemberList.pageable.pageNumber+1}">
-            <a th:href="@{/semiMember/pagingList(page=${semiMemberList.totalPages-1})}"  class="span1">마지막</a>
+            <a th:href="@{/semiMember/pagingList(page=${semiMemberList.totalPages-1}, search=${param.search}, subject=${param.subject})}"  class="span1">마지막</a>
           </span>
         </li>
       </ul>
