--- a/src/main/resources/templates/admin/product/detail.html
+++ b/src/main/resources/templates/admin/product/detail.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>List</title>
-  <link rel="stylesheet" th:href="@{/css/product/detail.css}">
+  <link rel="stylesheet" th:href="@{/css/admin/product/detail.css}">
   <link rel="stylesheet" href="maincss.css">
 </head>
 <body>
