--- a/src/main/resources/templates/member/list.html
+++ b/src/main/resources/templates/member/list.html
@@ -3,10 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title>회원목록 선택페이지</title>
+    <link rel="stylesheet" th:href="@{/css/member/list.css}">
 </head>
 <body>
-<a th:href="@{/member/memberList}">회원목록(noPaging)</a>
-<a th:href="@{/member/pagingList?page=0&subject=&search=}">회원목록</a>
-<a th:href="@{/semiMember/pagingList?page=0&subject=&search=}">간편회원목록</a>
+    <div class="container">
+        <div class="nav">
+            <!-- admin page header,sidebar 연결 -->
+            <div class="button">
+                <div class="list">
+                    <a th:href="@{/member/memberList}">회원목록(noPaging)</a>
+                </div>
+                <div class="paginglist">
+                    <a th:href="@{/member/pagingList?page=0&subject=&search=}">회원목록</a>
+                </div>
+                <div class="semilist">
+                    <a th:href="@{/semiMember/pagingList?page=0&subject=&search=}">간편회원목록</a>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
