inquiry reply design 수정

--- a/src/main/resources/static/css/inquiry/detail.css
+++ b/src/main/resources/static/css/inquiry/detail.css
@@ -228,7 +228,7 @@
     box-sizing: border-box;
 }
 .container .detail .detail-con .reply-con .reply-write form>ul>li:not(.Btn) textarea{
-    width: 780px;
+    width: 900px;
     height: 300px;
     padding: 10px;
     box-shadow: inset 0px -2px 4px -1px #8c9cdb;
@@ -253,17 +253,61 @@
     background: #4b66c7;
     box-shadow: 0 10px 10px 0 #cccccc;
 }
+
+/* reply */
 .container .detail .detail-con .replyList{
-    width: inherit;
     padding: 10px;
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
+    align-items: center;
     justify-content: center;
-    border: 2px solid red;
+    box-shadow: inset 0px -2px 4px -1px #8c9cdb;
+    display: flex;
 }
 .container .detail .detail-con .replyList .replyCon{
-    border: 2px solid yellow;
 }
 .container .detail .detail-con .replyList .replyCon>ul{
-    border: 2px solid green;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+}
+.container .detail .detail-con .replyList .replyCon>ul>li.writer{
+    padding: 10px;
+    font-size: 20px;
+}
+.container .detail .detail-con .replyList .replyCon>ul>li.create{
+    padding: 5px;
+    text-align: end;
+    border-bottom: 1px solid #4b66c7;
+}
+.container .detail .detail-con .replyList .replyCon>ul .content{
+    width: 900px;
+    min-height: 100px;
+    display: flex;
+    flex-direction: column;
+}
+.container .detail .detail-con .replyList .replyCon>ul .content span{
+    width: 900px;
+    min-height: 100px;
+    padding: 0 0 30px 0;
+    font-size: 18px;
+
+}
+.container .detail .detail-con .replyList .replyCon>ul .content .Btn{
+    display: grid;
+    justify-items: end;
+    padding: 10px;
+    gap: 6px;
 }
 
+.container .detail .detail-con .replyList .replyCon>ul .content .Btn input{
+    width: 250px;
+    height: 25px;
+    font-size: 16px;
+    background: none;
+    border-radius: 10px;
+    border: 2px solid #7285d3;
+}
+.container .detail .detail-con .replyList .replyCon>ul .content input:hover{
+    color: white;
+    background: #7285d3;
+}
