header에 네이버 api 연동 링크 추가

--- a/src/main/resources/templates/fragments/common/header.html
+++ b/src/main/resources/templates/fragments/common/header.html
@@ -53,6 +53,7 @@
                         <li><a th:href="@{/member/logout}">로그아웃</a></li>
                         <span sec:authentication="name" class="data1 span"></span>님 <!-- 간편회원 이메일 출력(간편회원은 닉네임이 없음) -->
                     </th:block>
+                    <li><a th:href="@{https://team1.ncpworkplace.com}">네이버 API 연동</a></li>
                 </ul>
             </div>
         </div>
