--- a/src/main/resources/static/css/admin/index.css
+++ b/src/main/resources/static/css/admin/index.css
@@ -1,11 +1,9 @@
 @import url(/css/common/reset.css);
+@import url(/css/admin/common/header.css);
+@import url(/css/admin/common/sidebar.css);
 
-/* fragments 안했어요 그냥 통  css 파일입니다 */
 
 /*catfather49@gmail.com*/
-
-  /* header */
-
 
   *{
     margin: 0;
@@ -39,113 +37,6 @@
     background-color: transparent;
   }
 
-  .header{
-    height: 80px;
-    padding: 20px;
-    background-color: #4F6DE3;
-
-  }
-
-  .header .top-nav{
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-
-  }
-
-  .header .top-nav .logo{
-    width: 40%;
-  }
-
-  .header .top-nav ul{
-    display: flex;
-    width: 30%;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
-  }
-
-  .header .top-nav ul li{
-    padding : 5px;
-    width: 100px;
-    text-align: center;
-    box-sizing: border-box;
-    background-color: white;
-    border: 1px solid #8C9CDB;
-    border-radius: 10px;
-    box-sizing: border-box;
-
-  }
-
-  /* sideBar ========================================================== */
- 
-  :root {
-    --side-bar-width: 200px;
-    --side-bar-height: 70vh;
-  }
-
-
-  .sideBar{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: space-evenly;
-    padding: 10px;
-    background-color: #7286D3;
-
-    transform: translate(calc(var(--side-bar-width) * -0.9), 0);  /* X축 이동, Y축 고정 */
-    transition: .5s;
-    position: fixed;    /* 스크롤을 따라오도록 지정 */
-    width: var(--side-bar-width); /*변수를 통해 사이드바 넒이 조정*/
-    min-height: var(--side-bar-height);   /*사이드바 높이 조정*/
-
-    /* height: 1000px; 사이드바 길이 설정하기 */
-
-  }
-
-  .sideBar > .sideBar-sec > ul > li {
-    position: relative;
-  }
-
-  .sideBar > .sideBar-sec > ul > li:after {
-          content: "";
-          display: block;
-          width: 60px;
-          border-bottom: 1px solid #bcbcbc;
-          margin: 20px auto;
-        }
-
-  .sideBar > .sideBar-sec > ul{
-    padding: 10px;
-  }
-
-  .sideBar > .sideBar-sec > ul > li > ul{
-    display: none;
-  }
-
-  .sideBar > .sideBar-sec > ul li{
-    margin-bottom: 25px;
-  }
-
-  .sideBar > .sideBar-sec > ul > li:hover > ul  {
-    display: block;
-    position: absolute;
-    background-color: #E3BD4F;
-    top: 0;         /* 2차 메뉴의 상단을 1차 메뉴의 상단에 고정 */
-    left: 100%;     /* 2차 메뉴를 1차 메뉴의 너비만큼 이동 */
-    width: 150%;    /* 1차 메뉴의 너비를 상속 */
-    text-align: center;
-  }
-
-  .sideBar > *{
-    position: relative;
-
-  }
-
-  .sideBar:hover {
-    transform: translate(15px, 0);   /* 둥근 모서리의 너비만큼 X축 이동, Y축 고정 */
-  }
 
 
  /* main ============================================================================*/
