--- a/src/main/resources/static/css/admin/common/header.css
+++ b/src/main/resources/static/css/admin/common/header.css
@@ -1,31 +1,33 @@
 @import url(/css/common/reset.css);
-.header{
+
+  .header{
     height: 80px;
     padding: 20px;
-    background-color: #4b66c7;
-}
+    background-color: #4F6DE3;
 
-.header .top-nav{
+  }
+
+  .header .top-nav{
     width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 
-}
+  }
 
-.header .top-nav .logo{
+  .header .top-nav .logo{
     width: 40%;
-}
+  }
 
-.header .top-nav ul{
+  .header .top-nav ul{
     display: flex;
     width: 30%;
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
-}
+  }
 
-.header .top-nav ul li{
+  .header .top-nav ul li{
     padding : 5px;
     width: 100px;
     text-align: center;
@@ -34,4 +36,6 @@
     border: 1px solid #8C9CDB;
     border-radius: 10px;
     box-sizing: border-box;
-}
+
+  }
+
