--- a/src/main/resources/templates/admin/fragments/layout/baseLayout.html
+++ b/src/main/resources/templates/admin/fragments/layout/baseLayout.html
@@ -6,7 +6,7 @@
 <body>
 
 <div class="header" th:replace="~{admin/fragments/common/header :: headerFragment}"></div>
-<!--<div class="sidebar" th:replace="~{admin/fragments/common/sidebar :: sidebarFragment}"></div>-->
+<div class="sidebar" th:replace="~{admin/fragments/common/sidebar :: sidebarFragment}"></div>
 <th:block layout:fragment="container">
     <!-- 각페이지의 컨텐츠  -->
 </th:block>
